Fixes a problem where the cast and crew of a movie's alternate version is broken into multiple lines on the Desktop.

--- a/TokuCinema/src/styles/components/moviedetails/desktop.scss
+++ b/TokuCinema/src/styles/components/moviedetails/desktop.scss
@@ -29,3 +29,7 @@
   display: inline-block;
   width: 40%;
 }
+
+.movie-alt-cast-crew {
+  width: auto;
+}
